--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-contrib-watch": "~0.4.3",
     "grunt-contrib-jshint": "~0.4.3",
-    "grunt-notify": "~0.2.3",
     "grunt-contrib-csslint": "~0.1.2",
-    "grunt-contrib-mincss": "~0.3.2"
+    "grunt-contrib-cssmin": "~0.6.0"
   }
 }
